make-a-wish-salesforce/src/objects/leadconvertchtr__LeadConvertChatter__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>leadconvertchtr__Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should people posts on a lead be moved to the account upon convert?</description>
        <label>Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>leadconvertchtr__Contact__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Should people posts on a lead be moved to the contact upon convert?</description>
        <label>Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>leadconvertchtr__MergeLeadContact__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Move Posts on Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>leadconvertchtr__Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should people posts on a lead be moved to the opportunity upon convert?</description>
        <label>Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <label>Lead Convert Chatter</label>
</CustomObject>